Added games page

--- a/games.html
+++ b/games.html
@@ -18,9 +18,9 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li class="current"><a href="about.html">About</a></li>
-					<li><a href="games.html">Games</a></li>
-					<li><a href="contacts.html">Contacts</a></li>
+					<li><a href="about.html">About</a></li>
+					<li class="current"><a href="games.html">Games</a></li>
+                    <li><a href="contacts.html">Contacts</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -28,7 +28,7 @@
 	<section id="main">
 		<div class="container">
 			<article id="main-col">
-				<h1 class="page-title">About us</h1>
+				<h1 class="page-title">Our Game</h1>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,	
 					quis nostrud exercitation ullamco laboris nisi ut aliqu	ip 	ex ea commodo
@@ -41,16 +41,16 @@
 			</article>
 			<aside id="sidebar">
 				<div class="dark">
-				<h1>What We Do</h1>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua.
-			    </p>
+				<h1>Downloads</h1>
+                <ul>
+                    <li><a href="https://play.google.com/store/apps?hl=it&gl=US&pli=1" target="_blank"><img src="./images/GooglePlay-Logo.png"></a></li>
+                    <li><a href="https://www.apple.com/it/app-store/" target="_blank"><img src="./images/AppStore-Logo.png"></a></li>
+                </ul>
 			    </div>
 			</aside>
 		</div>
 	</section>
-	<section id="newsletter">
+    <section id="newsletter">
 		<div class="container">
 			<h1>Subscribe To Our Newsletter</h1>
 			<form>
