--- a/contacts.html
+++ b/contacts.html
@@ -19,22 +19,12 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
+					<li><a href="games.html">Games</a></li>
 					<li class="current"><a href="contacts.html">Contacts</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
-	<section id="newsletter">
-		<div class="container">
-			<h1>Subscribe To Our Newsletter</h1>
-			<form>
-				<input type="email" placeholder="Enter Email...">
-				<button type="submit" class="button_1">
-					Subscribe
-				</button>
-			</form>
-		</div>
-	</section>
 	<section id="main">
 		<div class="container">
 			<article id="main-col">
@@ -54,6 +44,17 @@
 					</li>
 				</ul>
 			</article>
+		</div>
+	</section>
+	<section id="newsletter">
+		<div class="container">
+			<h1>Subscribe To Our Newsletter</h1>
+			<form>
+				<input type="email" placeholder="Enter Email...">
+				<button type="submit" class="button_1">
+					Subscribe
+				</button>
+			</form>
 		</div>
 	</section>
 	<footer>Distopia Software House <a>&copy;</a> 2023</footer>
