--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<ul>
 					<li class="current"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="game-info.html">Game</a></li>
+					<li><a href="games.html">Games</a></li>
 					<li><a href="contacts.html">Contacts</a></li>
 				</ul>
 			</nav>
@@ -30,17 +30,6 @@
 			<h1>Distopia - our multiplayer platform game!</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua.</p>
-		</div>
-	</section>
-	<section id="newsletter">
-		<div class="container">
-			<h1>Subscribe To Our Newsletter</h1>
-			<form>
-				<input type="email" placeholder="Enter Email...">
-				<button type="submit" class="button_1">
-					Subscribe
-				</button>
-			</form>
 		</div>
 	</section>
 	<section id="boxes">
@@ -63,6 +52,17 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
+		</div>
+	</section>
+	<section id="newsletter">
+		<div class="container">
+			<h1>Subscribe To Our Newsletter</h1>
+			<form>
+				<input type="email" placeholder="Enter Email...">
+				<button type="submit" class="button_1">
+					Subscribe
+				</button>
+			</form>
 		</div>
 	</section>
 	<footer>Distopia Software House <a>&copy;</a> 2023</footer>
