--- a/games.html
+++ b/games.html
@@ -44,7 +44,7 @@
 				<h1>Downloads</h1>
                 <ul>
                     <li><a href="https://play.google.com/store/apps?hl=it&gl=US&pli=1" target="_blank"><img src="./images/GooglePlay-Logo.png"></a></li>
-                    <li><a href="https://www.apple.com/it/app-store/" target="_blank"><img src="./images/AppStore-Logo.png"></a></li>
+                    <li id="apple"><a href="https://www.apple.com/it/app-store/" target="_blank"><img src="./images/AppStore-Logo.png"></a></li>
                 </ul>
 			    </div>
 			</aside>
