--- a/games.html
+++ b/games.html
@@ -25,29 +25,13 @@
 			</nav>
 		</div>
 	</header>
-	<section id="main">
-		<div class="container">
-			<article id="main-col">
-				<h1 class="page-title">Our Game</h1>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,	
-					quis nostrud exercitation ullamco laboris nisi ut aliqu	ip 	ex ea commodo
-					consequat.
-				</p>
-				<p>
-					Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-			</article>
-			<aside id="sidebar">
-				<div class="dark">
-				<h1>Downloads</h1>
-                <ul>
-                    <li><a href="https://play.google.com/store/apps?hl=it&gl=US&pli=1" target="_blank"><img src="./images/GooglePlay-Logo.png"></a></li>
-                    <li id="apple"><a href="https://www.apple.com/it/app-store/" target="_blank"><img src="./images/AppStore-Logo.png"></a></li>
-                </ul>
-			    </div>
-			</aside>
+	<section class="dropdown">
+		<h1>Choose a game!</h1>
+		<button class="dropbtn">Which one?</button>
+		<div class="dropdown-content">
+			<a href="games/game1.html">Game 1</a>
+			<a href="games/game2.html">Game 2</a>
+			<a href="games/game3.html">Game 3</a>
 		</div>
 	</section>
     <section id="newsletter">
